--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"test": "playwright test"
 	},
 	"dependencies": {
+		"@saleor/cli": "latest",
 		"@adyen/adyen-web": "5.53.3",
 		"@adyen/api-library": "15.0.0-beta",
 		"@headlessui/react": "1.7.18",
